# light-control

./: Cargo.toml  README.md  example_config.json
src/: light_control.rs  main.rs
